--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Elifoot II</title>
+  <title>Elifoot II - v1.21</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg" sizes="16x16">
   <script src="js-dos.js"></script>
   <script src="my.js"></script>
