--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
 
 <body>
   <div id="root"></div>
+
+	Dos(document.getElementById("jsdos")).run("Elifoot_II_v1.21.jsdos");
+
+/*
   <script>
     window.onload = function() {
         myinit(document.getElementById("root"))
     }
   </script>
+*/
+
 </body>
 
 </html>
