--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <body>
   <div id="root"></div>
 
+	<script>
 	Dos(document.getElementById("jsdos")).run("Elifoot_II_v1.21.jsdos");
+	</script>
 
 /*
   <script>
