--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="root"></div>
 
 	<script>
-	Dos(document.getElementById("jsdos")).run("Elifoot_II_v1.21.jsdos");
+	Dos(document.getElementById("root")).run("Elifoot_II_v1.21.jsdos");
 	</script>
 
 /*
